--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/GUIdescription.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/GUIdescription.tex
@@ -10,16 +10,16 @@ The main window design differences from the sketch, see Figure \ref{fig:skitse1d
 The "New Packing List"-button has been removed because it was found irrelevant since the program is design so the user can edit the items / suitcases lists in other windows.
 
 \figur{0.8}{ManageItems.jpg}{This is a screenshot from the manage items window in the program.}{fig:ManageItems}
-The Manage Items menu is where the user can add, delete and/or edit items, see Figure \ref{fig:ManageItems}. The difference between the actually design and sketch, see Figure \ref{fig:skitse2done}, is that the "Item List" has been narrowed down and moved to the left of the window. This is done because the list itself does not need to that wide. Another difference is that have been added some six labels which updated and shows the selected items data. The labels are placed to the right of the list and have some names labels to go with them. The "Manage Item"-button have been renamed to "Edit Item" because is it a more describing name for the button. There have also been added a "Clear List"-button to make it easier for the user to remove all the items. All the buttons also have different alignment and moved to left.
+The Manage Items window is where the user can add, delete and/or edit items, see Figure \ref{fig:ManageItems}. The difference between the actually design and sketch, see Figure \ref{fig:skitse2done}, is that the "Item List" has been narrowed down and moved to the left of the window. This is done because the list itself does not need to that wide. Another difference is that have been added some six labels which updated and shows the selected items data. The labels are placed to the right of the list and have some names labels to go with them. The "Manage Item"-button have been renamed to "Edit Item" because is it a more describing name for the button. There have also been added a "Clear List"-button to make it easier for the user to remove all the items. All the buttons also have different alignment and moved to left.
 
 \figur{0.8}{ManageSuitcase.jpg}{This is a screenshot from the manage suitcase window in the program.}{fig:ManageSuitcase}
-Add, delete, or edit suitcases in the Manage Suitcase menu, see Figure \ref{fig:ManageSuitcase}. The differences between the actual design and the sketch, see Figure \ref{fig:skitse3done}, are almost the same as "ManageItems" just with other properties. There have also been added a text space were the user can set the weight limit for all the suitcases.
+Add, delete, or edit suitcases in the Manage Suitcase window, see Figure \ref{fig:ManageSuitcase}. The differences between the actual design and the sketch, see Figure \ref{fig:skitse3done}, are almost the same as "ManageItems" just with other properties. There have also been added a text space were the user can set the weight limit for all the suitcases.
 
 \figur{0.5}{About.jpg}{This is a screenshot from the about window in the program.}{fig:About}
 The "About"-button which tells who the programmers are, and when the program was made. This can be seen on Figure \ref{fig:About}. The "About" form have been made so it no longer is in the main window but opens through the main window with a button. The reason have been mentioned earlier.
 
 \figur{0.5}{AddItem.jpg}{This is a screenshot from the add item window in the program.}{fig:AddItem}
-When the user presses the "Add Item"-button in Manage Items, this form can be seen on Figure \ref{fig:AddItem}. In this form there is a text box, where the user types the name of the current item. There are 5 other text boxes which are for the length, width, height, weight, and number of items. The biggest difference between the design and the sketches, see Figure \ref{fig:skitse5done}, is that the 3D image has been completely remove from this section of the program. Another change is that the form itself have gotten smaller because it was unnecessary to use so much space when the 3D image no longer is there. The "View List"-button is unnecessary because the user goes from the "Item List" to the "Add Item" form. The "Previous" and "Save \& Add new" have been made into an "Add Item"-button. The have also been a drop down list were the user can select pre made items for to add. This is done to spare time for the user when adding items to the list.
+When the user presses the "Add Item"-button in Manage Items, this form can be seen on Figure \ref{fig:AddItem}. In this form there is a text box, where the user types the name of the current item. There are 5 other text boxes which are for the length, width, height, weight, and number of items. The biggest difference between the design and the sketches, see Figure \ref{fig:skitse5done}, is that the 3D image has been completely remove from this section of the program. Another change is that the form itself have gotten smaller because it was unnecessary to use so much space when the 3D image no longer is there. The "View List"-button is unnecessary because the user goes from the "Item List" to the "Add Item" form. The "Previous" and "Save \& Add new" have been made into an "Add Item"-button. There has also been a drop down list were the user can select premade items for to add. This is done to spare time for the user when adding items to the list.
 
 \figur{0.3}{AddSuitcase.jpg}{This is a screenshot from the add suitcase window in the program.}{fig:AddSuitcase}
 When the user presses the "Add Suitcase" button in Manage Suitcases, the user can add a new suitcase in a new form. The new form can be seen on Figure \ref{fig:AddSuitcase}. The data needed is the length, width, height, weight, and the maximum weight of the suitcase. The changes between the design, see Figure \ref{fig:AddSuitcase}, and the sketch, see Figure \ref{fig:skitse4done}, is almost the same as with "Add Item" form except the drop down list and some properties.
@@ -33,19 +33,18 @@ In "Manage Suitcase", there is a button called "Edit Suitcase" which opens a new
 %\figur{0.7}{LoadSavedLists.png}{Load List}{fig:LoadList}
 If the user already have used the program before and have saved an item list and a suitcase list, both can be loaded. This is done through the load button which activate the Windows standard load explore. This explore is then used to find the files. The load button can be seen on Figure \ref{fig:Main} which is the main window.
 
-\subsection{3D-viewer}
 The 3D-viewer shows how the program have packed the different items in the suitcases.
 
-%\figur{0.6}{frm3DViewer.png}{3D Viewer window}{fig:3dViewer}
-\figur{0.6}{frm3DViewer2.jpg}{This is a screenshot from the 3D Viewer window in the program.}{fig:3dViewer}
+%\figur{0.6}{frm3DViewer.png}{3D-viewer window}{fig:3dViewer}
+\figur{0.6}{frm3DViewer2.jpg}{This is a screenshot from the 3D-viewer window in the program.}{fig:3dViewer}
 
-This, see Figure \ref{fig:3dViewer}, is the first thing the user will see when the packing starts. It shows how the items are placed in the suitcase.
+This, see Figure \ref{fig:3dViewer}, is the first thing the user will see when the packing is finished. It shows how the items are placed in the suitcase.
 The image can be dragged, moved, and zoomed with the mouse, as seen below. When the user clicks on an item in the list on the right side, the marked item will be highlighted in the image. Below the list are the x-, y-, z-points to see where the item is supposed to be placed, and the current suitcase's weight.
 
 To highlight an item in the suitcase the user select the item in the item list. This is not a part of the sketch but the plan was that the user could use two buttons that can go through the list back and forth.
 
-On the left side of the window are two buttons, zoom in and zoom out. On the lower left side of the window is a check box called "Zoom Limit". It sets the limit for how close and how far the user can zoom the image. The buttons have been made in the case the user does not have a mouse with a scrolling wheel or is on laptop. The track bar on the left is a tool to adjust the speed when the user rotates the image. The reset button resets the track bar. Below the reset button is a drop-down list containing the suitcases the user has packed items into.
+On the left side of the window are tree buttons, zoom in, zoom out and reset. On the lower left side of the window is a check box called "Zoom Limit". It sets the limit for how close and how far the user can zoom the image. The buttons have been made in the case the user does not have a mouse with a scrolling wheel or is on laptop. The track bar on the left is a tool to adjust the speed when the user rotates the image. The reset button resets the track bar. Below the reset button is a drop-down list containing the suitcases the user has packed items into.
 
 The reason why it looks like it does is because it gives a good overview with the item list on the right, the 3D-image in the middle, and the image options (zoom in, zoom out, reset etc.) on the left.
 In the 3D-image a small box has been made in point(0;0;0) to indicate where it is, so the user easier can navigate through the items.
-The sketch of the 3D viewer can be seen on Figure \ref{fig:skitse7adone}.
+The sketch of the 3D-viewer can be seen on Figure \ref{fig:skitse7adone}.
