--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/developmentintro.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/developmentintro.tex
@@ -1,1 +1,1 @@
-In the following section the program will be described. Each function is described in its own part to make it more clear. Not all parts of the code will be described, because this would make the report too long. 
+In the following section the program will be described. Each of the most important functions is described in this chapter. The final GUI is also described.
