--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/GUIdescription.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/GUIdescription.tex
@@ -36,14 +36,14 @@ If the user already have used the program before and have saved an item list and
 The 3D-viewer shows how the program have packed the different items in the suitcases.
 
 %\figur{0.6}{frm3DViewer.png}{3D-viewer window}{fig:3dViewer}
-\figur{0.6}{frm3DViewer2.jpg}{This is a screenshot from the 3D-viewer window in the program.}{fig:3dViewer}
+\figur{0.6}{frm3DViewer2.jpg}{This is a screenshot from the 3D-viewer window in the program. }{fig:3dViewer}The bottom of the suitcase is mark with a grid
 
 This, see Figure \ref{fig:3dViewer}, is the first thing the user will see when the packing is finished. It shows how the items are placed in the suitcase.
 The image can be dragged, moved, and zoomed with the mouse, as seen below. When the user clicks on an item in the list on the right side, the marked item will be highlighted in the image. Below the list are the x-, y-, z-points to see where the item is supposed to be placed, and the current suitcase's weight.
 
 To highlight an item in the suitcase the user select the item in the item list. This is not a part of the sketch but the plan was that the user could use two buttons that can go through the list back and forth.
 
-On the left side of the window are tree buttons, zoom in, zoom out and reset. On the lower left side of the window is a check box called "Zoom Limit". It sets the limit for how close and how far the user can zoom the image. The buttons have been made in the case the user does not have a mouse with a scrolling wheel or is on laptop. The track bar on the left is a tool to adjust the speed when the user rotates the image. The reset button resets the track bar. Below the reset button is a drop-down list containing the suitcases the user has packed items into.
+On the left side of the window are tree buttons, zoom in, zoom out and reset. On the lower left side of the window is a check box called "Zoom Limit". It sets the limit for how close and how far the user can zoom the image. The buttons have been made in the case the user does not have a mouse with a scrolling wheel or is using a laptop. The track bar on the left is a tool to adjust the speed when the user rotates the image. The reset button resets the track bar. Below the reset button is a drop-down list containing the suitcases the user has packed items into.
 
 The reason why it looks like it does is because it gives a good overview with the item list on the right, the 3D-image in the middle, and the image options (zoom in, zoom out, reset etc.) on the left.
 In the 3D-image a small box has been made in point(0;0;0) to indicate where it is, so the user easier can navigate through the items.
