--- a/LaTeX/Rapport - NIX PILLE/indhold/design/GUIdescription.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/design/GUIdescription.tex
@@ -36,7 +36,7 @@ If the user already have used the program before and have saved an item list and
 The 3D-viewer shows how the program have packed the different items in the suitcases.
 
 %\figur{0.6}{frm3DViewer.png}{3D-viewer window}{fig:3dViewer}
-\figur{0.6}{frm3DViewer2.jpg}{This is a screenshot from the 3D-viewer window in the program. }{fig:3dViewer}The bottom of the suitcase is mark with a grid
+\figur{0.6}{frm3DViewer2.jpg}{This is a screenshot from the 3D-viewer window in the program. The bottom of the suitcase is mark with a grid}{fig:3dViewer}
 
 This, see Figure \ref{fig:3dViewer}, is the first thing the user will see when the packing is finished. It shows how the items are placed in the suitcase.
 The image can be dragged, moved, and zoomed with the mouse, as seen below. When the user clicks on an item in the list on the right side, the marked item will be highlighted in the image. Below the list are the x-, y-, z-points to see where the item is supposed to be placed, and the current suitcase's weight.
