--- a/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
@@ -1,7 +1,7 @@
 \section{The Development of The Packing Algorithm}
 \label{sec:devalgorithm}
 The algorithm was developed from the theory described in section \ref{sec:algorithm}. The theory has been extended from the experiences when packing the program. These extensions have made the packing more effective, which results in more items being packed. 
-To understand the different methods, the algorithm as described in section \ref{sec:algorithm} must be extended a bit. The extension will be described in this section, with a roundup at the end. To describe the code, this section will be divided in different subsections to understand the different parts of the code.
+To understand the different methods, the algorithm as described in section \ref{sec:algorithm} must be extended a bit. The extension will be described in this section, with a summing up at the end. To describe the code, this section will be divided in different subsections to understand the different parts of the code.
 
 \subsection{Classes}
 To handle the information and functions needed to handle suitcases and items to pack, the classes luggage and luggage\_item have been made. They do both inherit from the class Cube\_Shape, with the variables width, depth, height and name. The Cube\_Shape class provides the information of a cube, which both suitcases and items can be seen as.
