--- a/LaTeX/Rapport - NIX PILLE/indhold/design/sketchdescription.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/design/sketchdescription.tex
@@ -1,7 +1,7 @@
 \section{Sketches before programming of GUI}
 \label{sec:sketches}
 %Til retter: Vær OBS på første afsnit, er skrevet til
-This section will describe the first thoughts of the Graphical User Interface (GUI). This is not how the final GUI is designed, but the first sketches.
+This section will describe the first thoughts of the Graphical User Interface (GUI). This is not how the final GUI is designed, but the first sketches. The final GUI was improved by tests and own experience. The final GUI can be seen in Section \ref{sec:GUI}.
 Designing the program required some sketches and the first sketch looked like Figure \ref{fig:skitse1}.
 It shows some text boxes where the user must type the dimensions of the suitcase, so the program knows how much space it has to deal with, and that the measurements are in the metric unit system.
 
@@ -22,7 +22,7 @@ The difference between this and the previous sketch is that now there is a list 
 Figure \ref{fig:skitse3} is a look at how the packing list should look like, and what functions it should contain.
 There is "Add More Items"-button and a "Start Packing"-button. This form is opening when the user presses "View Item List" in the previous form.
 
-At last the final sketch for the GUI was decided. The 3D image viewer was replaced with the list of added items in the manage items and manage suitcases, because it gave a better overview of what the user already had added to the program. This can be seen on Figure \ref{fig:skitse1done} 
+At last the final sketch for the GUI was decided. The 3D image viewer was replaced with the list of added items in the manage items and manage suitcases, because it gave a better overview of what the user already had added to the program. This can be seen on Figure \ref{fig:skitse1done}.
 
 \figur{0.9}{1skitsedone.jpg}{Sketch of the main window}{fig:skitse1done}
 
@@ -31,11 +31,11 @@ These changes were made to give more usability to the program.
 
 \figur{0.9}{2skitsedone.jpg}{Updated version of the window where the user can manage items}{fig:skitse2done}
 
-Figure \ref{fig:skitse2done} is the sketch of the window that opens when the "Manage Items"-button was clicked. Here the 3D viewer has been replaced with a list of the items added in the program. The buttons are tools for adding, deleting or managing the items on the list while the "Save item list"-button lets the user save the list so it can be used another time and returns them to the main window.
+Figure \ref{fig:skitse2done} is the sketch of the window that opens when the "Manage Items"-button at main form was clicked. The buttons are tools for adding, deleting or managing the items on the list while the "Save item list"-button lets the user save the list so it can be used another time and returns them to the main window.
 
 \figur{0.9}{3skitsedone.jpg}{Window where the user can manage suitcases}{fig:skitse3done}
 
-The window seen on Figure \ref{fig:skitse3done} opens when the "Manage Suitcase"-button was clicked. Like in the "Manage Items" window the 3D viewer has been replaced with a list of all the added suitcases. When it comes to functionality the buttons do the same as those in the "Manage Items" window just with suitcases. Clicking the "Save Suitcase List"-button will let the user save the list and will return them to the main window.
+The window seen on Figure \ref{fig:skitse3done} opens when the "Manage Suitcases"-button at the main form was clicked. The 3D-viewer has been replaced compared with Figure \ref{fig:skitse1} with a list of all the added suitcases. When it comes to functionality the buttons do the same as those in the "Manage Items" window just with suitcases. Clicking the "Save Suitcase List"-button will let the user save the list and will return them to the main window.
 
 \figur{0.9}{4skitsedone.jpg}{Sketch of the window that appear if the user clicks the "New packing list"-button}{fig:skitse4done}
 
@@ -51,11 +51,11 @@ Figure \ref{fig:skitse6done} is the window that will be shown when the "Load sav
 
 \figur{0.9}{7askitsedone.jpg}{Sketch of the 3D-viewer of the program}{fig:skitse7adone}
 
-Figure \ref{fig:skitse7adone} is one of the suggestions on how the window showing where the items should be packed, could look like. Here the 3D viewer show the position of every item, one item at a time. The two buttons are used to go back and forth through the items.
+Figure \ref{fig:skitse7adone} is one of the suggestions on how the window showing where the items should be packed, could look like. Here the 3D-viewer show the position of every item, one item at a time. The two buttons are used to go back and forth through the items.
 
 \figur{0.9}{7bskitse.jpg}{Sketch of the 3D-viewer with instructions added}{fig:skitse7bdone}
 
-Figure \ref{fig:skitse7bdone} is the second suggestion on how the window should look like. Here the 3D viewer is smaller but on the other hand has a list of instructions on the side to better help guide the user. The two buttons are used to go back and forth through the items.
+Figure \ref{fig:skitse7bdone} is the second suggestion on how the window should look like. Here the 3D-viewer is smaller but on the other hand has a list of instructions on the side to better help guide the user. The two buttons are used to go back and forth through the items.
 
 \figur{0.4}{8skitse.jpg}{Sketch of the message box that will be shown when the items have been packed}{fig:skitse8}
 
