--- a/LaTeX/Rapport - NIX PILLE/indhold/development/ColorGiver.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/ColorGiver.tex
@@ -2,8 +2,8 @@
 \label{sec:ColorGiver}
 This function gives each item a color and ensures that items that lie next to each other do not get the same color. The function has four steps to complete before its task is finished.
 
-The first step is to add curtain coordinates of each item into a list. This is done for all items that are to be packed. First, a "for" loop runs through the items that are to be packed. Inside the first "for" loop there are three "for" loops that run through the x, y and z coordinates starting at the saved coordinate for the current item. The loops then runs until the limits are reached for the three "for" loops which are the height, width and length. These loops can be seen listing \ref{lst:ColorGiverListing1}. At the end of the three "for" loop there are an "if" statement which controls that it is only coordinates(x, y, and z) on the outside of an item that are added. The "if" statement works by checking if one of the coordinates (x, y or z) is either at the respective start point(saved point x, y, or z) or at the maximum limit (height, weight or length) and then only allow coordinates where this is fulfilled and thereby achieve coordinates on the outside of the item.
-When the "if" statement is fulfilled, the three integers x, y and z are added to their representative lists that are stored in a temporary variable of type cbox. Cbox is a class that has 3 lists in it. These three lists outline the sides of their respective object. The temporary variable are then stored in the "BoxColor" list which is the final list.
+The first step is to add certain coordinates of each item into a list. This is done for all items that are to be packed. First, a "for" loop runs through the items that are to be packed. Inside the first "for" loop there are three "for" loops that run through the x, y and z coordinates starting at the saved coordinate for the current item. The loops then runs until the limits are reached for the three "for" loops which are the height, width and length. These loops can be seen on listing \ref{lst:ColorGiverListing1}. At the end of the three "for" loops there are an "if" statement which controls that it is only coordinates(x, y, and z) on the outside of an item that are added. The "if" statement works by checking if one of the coordinates (x, y or z) is either at the respective start point(saved point x, y, or z) or at the maximum limit (height, weight or length) and then only allow coordinates where this is fulfilled and thereby achieve coordinates on the outside of the item.
+When the "if" statement is fulfilled, the three integers x, y and z are added to their representative lists that are stored in a temporary variable of type cbox. Cbox is a class that has 3 lists in it. These three lists outline the sides of their respective object. The temporary variable are then stored in the "BoxColor" list which is the final list. Due to the size of the "if" sentences, it is not displayed in the report. See the program on the CD, see Appendix \ref{chap:CD}.
 \kode{The four "for" loops which controls the item and the (x; y; z) value that make the point for the items. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing1}{ColorGiverListing1.txt}
 
 The second step is to check which items are neighbors through two "for" loops. Thereby determining if they are located next to each other. If they are, the item number will be saved in a list that is called "neighbor". This step works by four "for" loops where the first loop keeps track of the current item that is being checked for neighbors. The second loop keeps track of the item that is being checked, and if it is a neighbor to the first one. The last two loops work with the points that are in the item's lists. But it will only run these loops if the items are in the same suitcase (Which can be seen by the "if" statement that are between the first two and the last two "for" loops). If they are next to each other it will save the item's number into a list in the other item. This is done for the other item as well. The 2 loops and setting of an item's neighbor can be seen on listing \ref{lst:ColorGiverListing2}.
